# reedsolomon

./: .gitignore  CMakeLists.txt
include/: RS.h
src/: RS.c
test/: TestRS.cpp  TestRunner.cpp
